--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<gateway.version>1.1.0-SNAPSHOT</gateway.version>
+		<gateway.version>1.1.0</gateway.version>
 		<dubbo.version>2.7.15</dubbo.version>
 		<lombok.version>1.18.18</lombok.version>
 		<janino.version>3.1.3</janino.version>
