--- a/gateway-samples-provider/src/main/resources/application.properties
+++ b/gateway-samples-provider/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8081
-dubbo.registry.address=zookeeper://mse-4936b3d0-zk.mse.aliyuncs.com:2181
+dubbo.registry.address=zookeeper://127.0.0.1:2181
 dubbo.appName=gateway-samples-provider
 dubbo.group=samples
 dubbo.version=1.0.0
