--- a/gateway-samples/src/main/resources/application.properties
+++ b/gateway-samples/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 gateway.netty.server.port=80
 gateway.netty.server.connect-timeout=3000
 gateway.netty.business.thread-count=50
-gateway.dubbo.registry.address=zookeeper://mse-4936b3d0-zk.mse.aliyuncs.com:2181
+gateway.dubbo.registry.address=zookeeper://127.0.0.1:2181
 gateway.dubbo.openservice=false
 
