--- a/gateway-samples-provider/src/main/resources/application.properties
+++ b/gateway-samples-provider/src/main/resources/application.properties
@@ -1,6 +1,22 @@
-server.port=8081
+server.port=8080
+
 dubbo.registry.address=zookeeper://127.0.0.1:2181
 dubbo.appName=gateway-samples-provider
 dubbo.group=samples
 dubbo.version=1.0.0
+
+
+gateway.doc.config.autodoc=true
+gateway.doc.config.projectName=${dubbo.appName}
+gateway.doc.config.group=${dubbo.group}
+gateway.doc.config.version=${dubbo.version}
+gateway.doc.config.path=./
+gateway.doc.config.serviceAnnotation=com.kalman03.gateway.annotation.OpenService
+gateway.doc.config.oss.accessKeyId=***
+gateway.doc.config.oss.accessKeySecret=***
+gateway.doc.config.oss.bucket=***
+gateway.doc.config.oss.bucketDir=samples-demo
+gateway.doc.config.oss.endpoint=oss-cn-hangzhou.aliyuncs.com
+gateway.doc.config.oss.regionId=cn-hangzhou
+gateway.doc.config.oss.cdnBaseUrl=https://yourdomain.com
 
